gts-macros/tests/compile_fail/instance_const_wrong_type.stderr
error: gts_well_known_instance: The annotated const must have type `&str`, got `u32`. Usage: `const NAME: &str = r#"{ ... }"#;`
 --> tests/compile_fail/instance_const_wrong_type.rs:9:21
  |
9 | const ORDERS_TOPIC: u32 = 42;
  |                     ^^^
